typecheck/tests/micro/good/test.c
int main(void) {
	return 1;
}

int a(int b, int c, int d, int e) {
	return 2;
}
	
