typecheck/tests/micro/bad/while_array.c

void main(void)
{
	int apple[10];
	while(apple)
	{}
return;
}
